package com.example.util

class PreferenceManager {
}